Added generated sources and associated fixes
